SFDCProject/src/objects/Partner_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>From_Relationship__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead-Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_From_Account__c</fullName>
        <label>Related From Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Relationships</relationshipLabel>
        <relationshipName>RelatedFromAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Relationships (Related To Account)</relationshipLabel>
        <relationshipName>RelatedToAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Relationship</label>
    <nameField>
        <displayFormat>SRP-{0000000000}</displayFormat>
        <label>Partner Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>